generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

datasource db {
  provider = "mysql"
}

enum Role {
  HR
  INTERVIEWER
  MANAGEMENT
  HIRING_MANAGER
  IT_ADMIN
  LEADERSHIP_MANAGEMENT
}

enum VacancyStatus {
  OPEN
  CLOSED
  ON_HOLD
}

// US-05 redesign: reduced to 4 fixed anchors. APPLIED/SHORTLISTED are
// pre-interview; HIRED/REJECTED are final outcomes. The interview phase
// itself is no longer part of this enum -- it's HR-configurable per vacancy
// via VacancyStage below. While a candidate is moving through interview
// rounds, `stage` stays SHORTLISTED and CandidateApplication.currentVacancyStageId
// tracks which round they're in. REJECTED is reachable from any point (any
// round, or straight from SHORTLISTED), same "any time" exception as before.
enum RecruitmentStage {
  APPLIED
  SHORTLISTED
  HIRED
  REJECTED
}

enum HiringDecision {
  HIRE
  REJECT
}

// US-19: Hiring Manager's advisory recommendation. Deliberately NOT the same
// thing as CandidateApplication.stage -- this is advisory input only and never
// mutates the application's actual stage.
enum RecommendationValue {
  ADVANCE
  DO_NOT_PROGRESS
}

model User {
  id                  Int       @id @default(autoincrement())
  name                String
  email               String    @unique
  passwordHash        String
  role                Role
  department          String?
  phoneNumber         String?
  isActive            Boolean   @default(true)
  mustChangePassword  Boolean   @default(false)
  createdAt           DateTime  @default(now())
  resetTokenHash      String?
  resetTokenExpiresAt DateTime?
  // Approximate "is this person currently using the system" signal --
  // updated (throttled, fire-and-forget) by requireAuth on every
  // authenticated request. Not a true session registry: JWTs are stateless
  // by design (no server-side login/logout record), so this can only ever
  // answer "made an authenticated request recently," not "has an open
  // session right now." IT Admin's Users page treats anyone with a
  // lastActiveAt inside the last ~10 minutes as "active now."
  lastActiveAt        DateTime?

  feedbackGiven        Feedback[]
  panelistOn           InterviewPanelist[]
  decisionsMade        CandidateApplication[]    @relation("DecidedBy")
  feedbackEdits         FeedbackAuditLog[]
  cvReviews             Candidate[]               @relation("LastCvReviewedBy")
  assignedHmOn          CandidateApplication[]    @relation("AssignedHiringManager")
  stageChangesMade      ApplicationStageHistory[]
  recommendationsMade   StageRecommendation[]
  vacancyInterviewerOn  VacancyInterviewer[]
  interviewPanelMemberships InterviewPanelMember[]
  auditLogEntries       AuditLog[]
  // SCRUM2-45: IT Admin edits to notification templates, audited by who/when.
  notificationTemplateEdits NotificationTemplate[]
  // SCRUM2-31: this user's own in-app notification inbox.
  notifications             Notification[]
}

model Vacancy {
  id              Int           @id @default(autoincrement())
  title           String
  department      String
  description     String        @db.Text
  // Bug fix: both of these were plain String (MySQL VARCHAR(191)) despite
  // being free-text textareas in the Create/Edit Vacancy form -- anything
  // over 191 characters crashed the request with a P2000 "value too long"
  // error instead of saving. @db.Text matches description's column type.
  requirements    String?       @db.Text
  preferredSkills String?       @db.Text
  status          VacancyStatus @default(OPEN)
  createdAt       DateTime      @default(now())

  // Optional, set by HR at creation or via Edit Vacancy -- never required
  // (a vacancy with no target date never counts as overdue/delayed anywhere).
  // Drives the On Track/Delayed/Overdue status shown on HM/Management/
  // Leadership vacancy screens -- computed client-side from this + today's
  // date, not a stored status field.
  targetFillDate DateTime?

  applications CandidateApplication[]
  interviewers VacancyInterviewer[]
  stages       VacancyStage[]
  panels       InterviewPanel[]

  // R-10 in the risk register: this used to be a hard DB-level
  // @@unique([title, department]), which blocked reposting a similar role
  // even once the earlier vacancy was CLOSED -- a legitimate, expected
  // business action (a role reopening months later). MySQL has no partial/
  // filtered unique index (unlike Postgres), so there's no DB-level way to
  // say "unique only among OPEN/ON_HOLD rows". The check is now done in
  // application code instead (vacancy.controller.ts's createVacancy/
  // updateVacancy), scoped to active vacancies only -- see
  // assertNoActiveDuplicate() there.
}

// US-05: HR-configurable interview rounds, per vacancy. `order` (1-based) is
// the authoritative sequence for "no skipping, no moving backwards" within
// the interview phase. Locking is per-round, not whole-vacancy: a specific
// round is locked (no rename/delete, and can't be reordered past) once any
// candidate has ever entered it -- derived from ApplicationStageHistory
// rows for that vacancyStageId, not a stored flag (see isStageLocked() /
// lockedStageIdSet() in vacancy.controller.ts). New rounds always append
// and are never locked. Cross-vacancy reports must aggregate by `order`,
// not `name` -- names aren't consistent across vacancies (different HR
// users can call round 1 anything).
model VacancyStage {
  id        Int     @id @default(autoincrement())
  vacancyId Int
  vacancy   Vacancy @relation(fields: [vacancyId], references: [id], onDelete: Cascade)
  name      String
  order     Int

  applications   CandidateApplication[]
  interviewSlots InterviewSlot[]
  historyEntries ApplicationStageHistory[]

  @@unique([vacancyId, order])
}

// US-10/US-11: HR assigns interviewers/management personnel to a vacancy as a
// standing pool, ahead of scheduling any specific interview. scheduleInterview
// validates panelists come from this pool and checks for time conflicts.
model VacancyInterviewer {
  id        Int     @id @default(autoincrement())
  vacancyId Int
  vacancy   Vacancy @relation(fields: [vacancyId], references: [id])
  userId    Int
  user      User    @relation(fields: [userId], references: [id])

  @@unique([vacancyId, userId])
}

// Named, reusable subset of a vacancy's interviewer pool ("Panel 1",
// "Panel 2"), so HR can save a specific grouping once and pick it again at
// Schedule Interview time instead of re-selecting individual people every
// time. Deliberately additive alongside VacancyInterviewer, not a
// replacement -- VacancyInterviewer stays "everyone assigned to this
// vacancy across all its panels" (what validatePanelistsAndConflict checks
// against), while InterviewPanel is a named grouping within that pool.
// Creating a panel upserts its members into VacancyInterviewer too, so
// existing scheduling validation needs no changes. Same person can be a
// member of multiple panels for the same vacancy -- reuse is intentional,
// not blocked.
model InterviewPanel {
  id        Int      @id @default(autoincrement())
  vacancyId Int
  vacancy   Vacancy  @relation(fields: [vacancyId], references: [id])
  name      String
  createdAt DateTime @default(now())

  members InterviewPanelMember[]

  @@unique([vacancyId, name])
}

model InterviewPanelMember {
  id      Int            @id @default(autoincrement())
  panelId Int
  panel   InterviewPanel @relation(fields: [panelId], references: [id], onDelete: Cascade)
  userId  Int
  user    User           @relation(fields: [userId], references: [id])

  @@unique([panelId, userId])
}

model Candidate {
  id          Int      @id @default(autoincrement())
  name        String
  email       String   @unique
  phoneNumber String?
  cvUrl       String
  createdAt   DateTime @default(now())

  lastCvReviewedByUserId Int?
  lastCvReviewedBy       User?     @relation("LastCvReviewedBy", fields: [lastCvReviewedByUserId], references: [id])
  lastCvReviewedAt       DateTime?
  // Frontend-corrections pass: free-text note HR can leave while screening a
  // CV (wireframe: "a place for the HR person to write the review on the
  // candidate's CV"). Separate from lastCvReviewedByUserId/At above -- those
  // two are set automatically on every view (see getCandidate), this is only
  // ever written when HR explicitly saves a note.
  lastCvReviewNote String? @db.Text

  applications CandidateApplication[]
}

model CandidateApplication {
  id          Int              @id @default(autoincrement())
  candidateId Int
  candidate   Candidate        @relation(fields: [candidateId], references: [id])
  vacancyId   Int
  vacancy     Vacancy          @relation(fields: [vacancyId], references: [id])

  // Single authoritative field for where this candidate is in the recruitment
  // pipeline. Replaces the old separate `status` + `currentStageId` fields.
  // Only ever APPLIED/SHORTLISTED/HIRED/REJECTED -- see currentVacancyStageId
  // below for interview-round progression.
  stage     RecruitmentStage @default(APPLIED)
  appliedAt DateTime         @default(now())

  // Which HR-configured interview round this candidate is currently in. Null
  // until they enter the vacancy's first round. Deliberately NOT nulled out
  // when the candidate is later HIRED or REJECTED -- it persists as a
  // historical breadcrumb ("which round were they in when this concluded").
  // NOTE: the per-round lock check (isStageLocked() / lockedStageIdSet() in
  // vacancy.controller.ts) does NOT use this field -- it only reflects where
  // a candidate sits right now, not every round they've ever passed through.
  // The lock check uses ApplicationStageHistory instead (see that model).
  currentVacancyStageId Int?
  currentVacancyStage   VacancyStage? @relation(fields: [currentVacancyStageId], references: [id])

  hiringDecision  HiringDecision?
  decidedByUserId Int?
  decidedBy       User?           @relation("DecidedBy", fields: [decidedByUserId], references: [id])
  decidedAt       DateTime?

  hiringManagerId Int?
  hiringManager   User? @relation("AssignedHiringManager", fields: [hiringManagerId], references: [id])

  interviews      Interview[]
  stageHistory    ApplicationStageHistory[]
  recommendations StageRecommendation[]

  @@unique([candidateId, vacancyId])
}

// US-33 (bottleneck identification / time in stage): every stage transition
// is logged with entry/exit timestamps so reports can compute time-in-stage
// and stage-progression history. Previously mislabeled "US-20/US-37" in this
// comment -- US-20 was a stale citation to the original raw backlog's
// informal "Interviewer updates candidate progression stages" story (a
// "zombie" entry, not real AC-doc content -- see project-decisions-log.md),
// and US-37 is actually "vacancy-specific reports" (the PDF report screens),
// not this table specifically. Corrected once the real numbering was
// confirmed. Exactly one of `stage` / `vacancyStageId` is set per row: `stage` for an anchor
// transition (APPLIED/SHORTLISTED/HIRED/REJECTED), `vacancyStageId` for
// entering a specific HR-configured interview round. Reports must group by
// vacancyStage.order (round index) when aggregating across vacancies, not by
// vacancyStage.name -- see the note on VacancyStage above.
model ApplicationStageHistory {
  id            Int                  @id @default(autoincrement())
  applicationId Int
  application   CandidateApplication @relation(fields: [applicationId], references: [id])

  stage          RecruitmentStage?
  vacancyStageId Int?
  vacancyStage   VacancyStage?       @relation(fields: [vacancyStageId], references: [id])
  enteredAt      DateTime            @default(now())
  exitedAt       DateTime?

  changedByUserId Int?
  changedBy       User? @relation(fields: [changedByUserId], references: [id])
}

// US-19: Hiring Manager's recommendation. Binding (see
// submitStageRecommendation in application.controller.ts) -- ADVANCE/
// DO_NOT_PROGRESS is what actually moves the application through interview
// rounds, there's no separate standalone stage-update action.
model StageRecommendation {
  id              Int                  @id @default(autoincrement())
  applicationId   Int
  application     CandidateApplication @relation(fields: [applicationId], references: [id])
  hiringManagerId Int
  hiringManager   User                 @relation(fields: [hiringManagerId], references: [id])
  recommendation  RecommendationValue
  comments        String?              @db.Text
  createdAt       DateTime             @default(now())
}

// Frontend-corrections pass ("HR's Interview pages" -- calendar module):
// the wireframe has HR schedule one time/panel/round slot and then add ONE
// OR SEVERAL candidates to it ("add candidate or candidates to an
// interview", "select all... add to interview"), and separately calls out
// that HR's own "round" label ("just after the lunch break, it's the next
// round of it") is a free-text convenience label, NOT the same thing as
// VacancyStage.order's strict no-skipping sequence. Both of those broke the
// old assumption that one Interview row = one time/panel/round *and* one
// candidate.
//
// Split into InterviewSlot (the calendar entry: when, which round, which
// panel, HR's optional round label) and Interview (one candidate's
// participation in that slot -- this is what Feedback still attaches to,
// one row per candidate, so panelist scoring/feedback logic elsewhere in
// the codebase needed no conceptual change, only its query's include
// shape). A slot can exist with zero candidates yet (schedule now, add
// candidates later, per the wireframe's separate "+" menu options).
model InterviewSlot {
  id             Int          @id @default(autoincrement())
  vacancyStageId Int
  vacancyStage   VacancyStage @relation(fields: [vacancyStageId], references: [id])
  scheduledAt    DateTime
  // HR's own free-text label for this slot within the round (e.g. "Round
  // 02", "After lunch") -- deliberately separate from VacancyStage.order,
  // which stays the strict, no-skipping progression sequence candidates
  // move through. Optional -- most rounds will only ever need one slot.
  roundLabel     String?
  createdAt      DateTime     @default(now())

  // SCRUM2-29: set once the reminder cron job (backend/src/jobs/
  // interviewReminders.ts) has emailed the candidate + panelists for this
  // slot, so the job never double-sends on its next 15-minute pass. Null
  // means "not sent yet" -- includes slots created before this field existed.
  reminderSentAt DateTime?

  panelists  InterviewPanelist[]
  interviews Interview[]
}

model InterviewPanelist {
  id      Int           @id @default(autoincrement())
  slotId  Int
  slot    InterviewSlot @relation(fields: [slotId], references: [id])
  userId  Int
  user    User          @relation(fields: [userId], references: [id])

  @@unique([slotId, userId])
}

model Interview {
  id     Int           @id @default(autoincrement())
  slotId Int
  slot   InterviewSlot @relation(fields: [slotId], references: [id])

  applicationId Int
  application   CandidateApplication @relation(fields: [applicationId], references: [id])
  createdAt     DateTime             @default(now())

  feedback Feedback[]

  // A candidate can't be added twice to the same slot.
  @@unique([slotId, applicationId])
}

model Feedback {
  id            Int       @id @default(autoincrement())
  interviewId   Int
  interview     Interview @relation(fields: [interviewId], references: [id])
  interviewerId Int
  interviewer   User      @relation(fields: [interviewerId], references: [id])
  score         Int
  comments      String    @db.Text
  createdAt     DateTime  @default(now())

  auditLog FeedbackAuditLog[]

  @@unique([interviewId, interviewerId])
}

model FeedbackAuditLog {
  id               Int      @id @default(autoincrement())
  feedbackId       Int
  feedback         Feedback @relation(fields: [feedbackId], references: [id])
  editedByUserId   Int
  editedBy         User     @relation(fields: [editedByUserId], references: [id])
  previousScore    Int
  previousComments String   @db.Text
  newScore         Int
  newComments      String   @db.Text
  reason           String   @db.Text
  editedAt         DateTime @default(now())
}

// Generic system-wide audit log (US-21/US-43). Deliberately does NOT duplicate
// stage transitions (see ApplicationStageHistory) or feedback edits (see
// FeedbackAuditLog) -- those stay in their own purpose-built tables and get
// merged into the audit view at read time. This table is only for events that
// have nowhere else to log to.
//
// Currently wired: VACANCY_CREATED, VACANCY_EDITED, VACANCY_CLOSED,
// CV_UPLOADED, FEEDBACK_SUBMITTED, INTERVIEW_SCHEDULED, NOTIFICATION_SENT,
// ACCOUNT_CREATED, ACCOUNT_DEACTIVATED, ROLE_CHANGED. All 8 originally
// proposed events are now wired -- see user.controller.ts for the last 3.
model AuditLog {
  id         Int      @id @default(autoincrement())
  userId     Int
  user       User     @relation(fields: [userId], references: [id])
  action     String
  entityType String
  entityId   Int?
  metadata   Json?
  createdAt  DateTime @default(now())

  @@index([entityType, entityId])
  @@index([createdAt])
}

// SCRUM2-45: configurable notification templates. Only covers the emails the
// system sends automatically with no human editing them at send time
// (interview scheduled, hiring decision, password reset, interview reminder)
// -- the three manual Follow-Ups sends (feedback reminder, manual candidate/
// panelist invite) deliberately stay HR's own free-typed text per-send
// (see followUp.controller.ts), since that's already "configurable" in a more
// direct way and rebuilding that as a fixed template would be a downgrade.
// `key` is a fixed, code-referenced set (see backend/src/utils/
// notificationTemplates.ts) -- rows are seeded, not created ad-hoc by IT
// Admin, so there's no risk of a key existing in the DB with nothing that
// ever reads it.
model NotificationTemplate {
  id              Int      @id @default(autoincrement())
  key             String   @unique
  subject         String
  body            String   @db.Text
  updatedAt       DateTime @updatedAt
  updatedByUserId Int?
  updatedBy       User?    @relation(fields: [updatedByUserId], references: [id])
}

// SCRUM2-31: in-app notification inbox, one row per (user, event). Only
// written for staff-facing events (candidates aren't app users and have no
// inbox to write to) -- see backend/src/utils/notify.ts, called alongside
// the matching sendEmail() at each staff-facing send site. Deliberately no
// push/websocket layer, consistent with the rest of this app: the frontend
// fetches on page load / bell-open, matching how every other screen here
// already works (fetch-on-mount, no realtime infra anywhere else either).
model Notification {
  id        Int      @id @default(autoincrement())
  userId    Int
  user      User     @relation(fields: [userId], references: [id])
  type      String
  message   String   @db.Text
  link      String?
  read      Boolean  @default(false)
  createdAt DateTime @default(now())

  @@index([userId, read])
  @@index([createdAt])
}
